--- a/css/styles.css
+++ b/css/styles.css
@@ -467,6 +467,11 @@ footer {
 .project-image {
   float: left;
 }
+.project-image::after {
+  content: "";
+  display: none;
+  clear: both;
+}
 
 .project-info {
   position: absolute;
